--- a/Linear Algebra Done Taiwan/macros.tex
+++ b/Linear Algebra Done Taiwan/macros.tex
@@ -18,7 +18,7 @@
 \newcommand{\ordone}{\orange{\text{ (done) }}}
 \newcommand{\ld}{\lambda}
 \newcommand{\vecta}[1]{\textbf{#1}}
-\newcommand{\set}[1]{\{ #1 \}}
+\newcommand{\set}[1]{\left\{ #1 \right\}}
 \newcommand{\bset}[1]{\Big\{ #1 \Big\}}
 \newcommand{\inR}{\in\R}
 \newcommand{\inn}{\in\N}
